fix align stats container order page

--- a/Client/public/css/order.css
+++ b/Client/public/css/order.css
@@ -168,11 +168,11 @@
 
 .search-main-container .stats-card {
     height: 100%;
-    padding: 0% 2.5%;
+    /* padding: 0% 2.5%; */
 }
 
 .search-main-container .statistic-container {
-    width: 51%;
+    width: 50%;
     display: grid;
     grid-template-columns: 20% 20% 20% 20% 20%;
     align-items: start;
